# backend/src/app.js
@@ -41,6 +41,7 @@ app.post('/v0/item', auth.check, item.uploadItem);
 app.get('/v0/item', auth.check, item.getItems);
 app.get('/v0/item/:itemID', auth.check, item.getItem);
 
+app.post('/v0/insertItem', auth.check, item.addToCart);
 
 // Your routes go here
 
